--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -1,8 +1,8 @@
 $font-color: #414141;
-$font-color2: #eee;
+$font-color2: #EEEEEE;
 $highlight-color: #20CAAE;
 $bg-color: #E5E5E5;
-$bg-box-color: #fff;
+$bg-box-color: #FFFFFF;
 
 
 
@@ -37,9 +37,143 @@ $bg-box-color: #fff;
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    background-color: $bg-color;
+    overflow-x: hidden; 
+}
+  .header {
+      &__strip {
+          width: 100%;
+          background-color: $bg-box-color;
+          display: grid;
+          grid-template-columns: 20% 1fr 20%;
+        &-dropdown {
+            color: $font-color;
+            text-decoration: none;
+            align-self: center;
+            justify-self: center;
+        }
+        &-logo {
+            width: 120px;
+            justify-self: center;
+        }
+        &-mobile-tab {
+            display: flex;
+            align-self: center;
+            align-items: center;
+            justify-self: center;
+            cursor: pointer;
+            &-container {
+                display: inline-block;
+                transform: rotateY(180deg);
+                &-lines {
+                    display: block;
+                    height: 2px;
+                    margin: 0.2em 0;
+                    background-color: $font-color;
+                    &:nth-child(1) {
+                        width: 20px;
+                    }
+                    &:nth-child(2) {
+                        width: 10px;
+                    }
+                    &:nth-child(3) {
+                        width: 15px;
+                    }
+                }
+            }
+            &-line {
+                display: inline-block;
+                height: 30px;
+                width: 2px;
+                margin: 0 1em;
+                background-color: $font-color;
+            }
+            &-text {
+                display: inline-block;
+            }
+        }
+      }
+  }
 
-  .box {
-      border: 1px solid $highlight-color;
-      width: 20px;
+  .header__menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+      .header-strip-item {
+            position: relative;
+            display: inline-block;
+        &:hover .header__list{
+            display: block;
+        }
+      }
+    .header__dropdown {
+        position: absolute;
+        left: 0;
+        right: 0;
+        background-color: $bg-box-color;
+        padding: 0  1em;
+        .header__list {
+            padding: 1.8em 0;
+            // text-align: center;
+            display: none;
+            .header__list-link {
+                text-decoration: none;
+                color: $font-color;
+            }
+        }
+    }
+  }
 
+  .header__nav {
+      transform: translateX(100%);
+      transition: transform 200ms ease-in-out;
+      width: 20%;
+      position: absolute;
+      right: 0;
+      top: 0;
+      background-color: $bg-box-color;
+      height: 100%;
+      &-arrow {
+          display: block;
+          margin: 1em;
+          padding: 1em;
+          cursor: pointer;
+      }
+      &-logo {
+          display: block;
+          width: 120px;
+          margin: 2em auto;
+      }
+      &-menu {
+          margin-top: 2em;
+          &-item {
+              list-style-type: none;
+              padding: 1em 0;
+              text-align: center;
+              &:nth-child(even) {
+              }
+                :hover > &-dropdown{
+                    display: block;
+                }
+              &-link {
+                  color: $font-color;
+                  text-decoration: none;
+
+              }
+              &-dropdown {
+                display: none;
+                &-item {
+                    list-style-type: none;
+                    padding: 1em 0;
+                    text-align: center;
+                    background-color: #ececec;
+                    &-link {
+                        color: $font-color;
+                        text-decoration: none;
+                    }
+                }
+              }
+          }
+      }
   }
