--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -4,6 +4,12 @@ $highlight-color: #20CAAE;
 $bg-color: #E5E5E5;
 $bg-box-color: #fff;
 
+$breakpoints: (
+    'mobile': 767px,
+    'tablet': 992px,
+    'large': 1200px
+    )!default;
+
 
 
 // 'Mixin for Drop Shadow on Cards'
@@ -32,10 +38,31 @@ $bg-box-color: #fff;
     background: linear-gradient($direction, $color-stops);
   }
 
+  /// Mixin to manage responsive breakpoints
+    /// @author Hugo Giraudel
+    /// @param {String} $breakpoint - Breakpoint name
+    /// @require $breakpoints
+    @mixin breakpoint($breakpoint) {
+    // If the key exists in the map
+    @if map-has-key($breakpoints, $breakpoint) {
+      // Prints a media query based on the value
+      @media (max-width: map-get($breakpoints, $breakpoint)) {
+        @content;
+      }
+    }
+   
+    // If the key doesn't exist in the map
+    @else {
+      @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+          + "Available breakpoints are: #{map-keys($breakpoints)}.";
+    }
+  }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Monsterrat', sans-serif;
 }
 
   .box {
@@ -44,16 +71,26 @@ $bg-box-color: #fff;
 
   }
 
+  body {
+        background-color: $bg-color;
+  }
+
   .main{
     &__tilmelding{
         display: grid;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: 50% auto;
+        background-color: #fff;
+        width: 80%; 
+        margin: 0 auto;
+        @include posterShadow();
+        @include breakpoint(large){
+            grid-template-columns: 1fr;
+        }
     }
     &__tilmelding-form{
         display: grid;
         margin: 0 auto;
         grid-gap: 2.5em;
-    
     }
     &__tilmelding-btn{
         height: 3em;
@@ -63,6 +100,15 @@ $bg-box-color: #fff;
         color: $highlight-color;
         width: 400px;
         height: 40px;
+        @include breakpoint(large){
+            width: 40vw;
+        }
+        @include breakpoint(tablet){
+            width: 40vw;
+        }
+        @include breakpoint(mobile){
+            width: 40vw;
+        }
     }
     &__tilmelding-heading{
 
@@ -74,7 +120,23 @@ $bg-box-color: #fff;
         border-right: transparent;
         width: 250px;
         margin: 0 auto;
-        height: 13px;
+        height: 20px;
         outline: none;
+        font-size: 1em;
+    }
+    &__tilmelding-fig{
+
+    }
+    &__tilmelding-img{
+        // margin-top: 3em;
+        display: block;
+        @include breakpoint(large){
+            width: 100%;
+            height: 500px;
+            margin-top: 5em;
+        }
+        width: 100%;
     }
 }
+
+
