--- a/content/css/style.css
+++ b/content/css/style.css
@@ -208,6 +208,8 @@ body {
   left: 50%;
   top: 50%;
   font-size: 4em;
+  font-family: 'Josefin Sans', sans-serif;
+  text-shadow: 1px 1px #949090;
 }
 
 .section__article {
@@ -216,7 +218,7 @@ body {
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
   grid-gap: 40px;
-  height: 1000px;
+  height: 1050px;
   margin: 20px;
   margin-top: 40px;
 }
@@ -232,6 +234,7 @@ body {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  border-bottom: 1px solid lightgray;
 }
 
 .section__article-fig-figcap {
@@ -240,8 +243,22 @@ body {
   color: #414141;
 }
 
+.section__article-fig-figcap a {
+  float: right;
+  text-decoration: none;
+  margin-top: 50px;
+  color: black;
+}
+
 .section__article-fig-figcap h3 {
   margin-bottom: 15px;
+}
+
+.section__article-bottem img {
+  height: 340px;
+  margin-top: 100px;
+  border-bottom: unset;
+  border-btop: 1px solid lightgray;
 }
 
 .content__article {
@@ -272,6 +289,7 @@ body {
 .content__article img {
   width: 100%;
   height: 280px;
+  border: 1px solid lightgray;
 }
 
 .footer__content {
@@ -282,15 +300,14 @@ body {
   height: 70px;
   background-color: #20CAAE;
   text-align: center;
-  font-size: 1.2em;
-  font-weight: 50;
+  font-size: 1em;
   margin-top: 80px;
+  padding: 25px;
 }
 
 .footer__content a {
   text-decoration: none;
   color: white;
-  display: inline-block;
   padding: 1em;
 }
 
@@ -299,7 +316,7 @@ body {
 }
 
 .footer__content-button {
-  border-right: 2px solid #9f9a9a;
+  border-right: 1px solid gray;
 }
 
 .footer {
@@ -308,7 +325,7 @@ body {
 
 .footer__text {
   text-align: center;
-  font-size: 1.4em;
+  font-size: 1.2em;
   height: 60px;
   margin-top: 25px;
 }
