--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -36,17 +36,21 @@ $bg-box-color: #FFFFFF;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
+
 body {
     background-color: $bg-color;
     overflow-x: hidden; 
 }
   .header {
       &__strip {
-          width: 100%;
-          background-color: $bg-box-color;
-          display: grid;
-          grid-template-columns: 20% 1fr 20%;
+        position: relative;
+        z-index: 101;
+        width: 100%;
+        background-color: $bg-box-color;
+        display: grid;
+        grid-template-columns: 20% 1fr 20%;
         &-dropdown {
             color: $font-color;
             text-decoration: none;
@@ -113,6 +117,7 @@ body {
         right: 0;
         background-color: $bg-box-color;
         padding: 0  1em;
+        box-shadow: 0 15px 10px 2px rgba(0,0,0,0.25);
         .header__list {
             padding: 1.8em 0;
             // text-align: center;
@@ -134,6 +139,8 @@ body {
       top: 0;
       background-color: $bg-box-color;
       height: 100%;
+      z-index: 101;
+      @include posterShadow();
       &-arrow {
           display: block;
           margin: 1em;
@@ -177,3 +184,244 @@ body {
           }
       }
   }
+.section {
+    height: 550px;
+    overflow: hidden;
+    &__video {
+        width: 100%;
+    }
+    &__article {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 40px;
+        height: 800px;
+        margin: 20px;
+        margin-top: 40px;
+        &-fig {
+            @include posterShadow();
+            width: 100%;
+            background-color: $bg-box-color;
+            img {
+                width: 100%;
+                object-fit: cover;
+            }
+            &-figcap {
+                width: 100%;
+                padding: 15px;
+                color: $font-color;
+                h3 {
+                    margin: 15px;
+                }
+            }
+        }
+    }
+}
+
+.content__article {
+    @include posterShadow();
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 20px;
+    margin-top: 40px;
+    &-figcap {
+        width: 100%;
+        padding: 30px;
+        background-color: $bg-box-color;
+        color: $font-color;
+        h3 {
+            margin: 15px;
+        }
+    }
+    img {
+        width: 100%;
+    }
+}
+
+.slider {
+    position: relative;
+    &__arrow-left {
+        position: absolute;
+        top: 50%;
+        left: 2em;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.85);
+        transform: translateY(-50%);
+        z-index: 100;
+        cursor: pointer;
+        i {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+    &__arrow-right {
+        position: absolute;
+        top: 50%;
+        right: 2em;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.85);
+        transform: translateY(-50%);
+        z-index: 100;
+        cursor: pointer;
+        i {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+    &__container {
+        display: flex;
+        transition: transform 600ms ease-in-out;
+    }
+    &__box {
+        margin: 1em;
+        flex-shrink: 0;
+        position: relative;
+        min-height: 500px;
+        max-height: 500px;
+        width: 31.7%;
+        @include cardShadow();
+        &:nth-child(1) {
+            @include linear-gradient(#a341d1, #c93ac9);
+        }
+        &:nth-child(2) {
+            @include linear-gradient(#1ed66b, #1dbb6c);
+        }
+        &:nth-child(3) {
+            @include linear-gradient(#cf201d, #dd1815);
+        }
+        &:nth-child(4) {
+            @include linear-gradient(#3989b8, #165f8a);
+        }
+        &:nth-child(5) {
+            @include linear-gradient(#8650eb, #7433ec);
+        }
+    }
+    &__fig {
+        @include posterShadow();
+        position: absolute;
+        top: 4em;
+        left: 2em;
+        width: 50%;
+        
+    }
+    &__img {
+        display: block;
+        width: 100%;
+    }
+
+    &__text-container {
+        position: absolute;
+        left: 58%;
+        top: 4em;
+        margin-right: 2em;
+    }
+    &__hearts {
+        margin: 1em .8em 1em 0;
+        :nth-child(1) {
+            color: $highlight-color;
+        }
+        :nth-child(2) {
+            color: $highlight-color;
+        }
+        :nth-child(3) {
+            color: $highlight-color;
+        }
+        :nth-child(4) {
+            color: $font-color2;
+        }
+        :nth-child(5) {
+            color: $font-color2;
+        }
+    }
+    &__header-text {
+        color: $font-color2;
+    }
+    &__text {
+        color: $font-color2;
+    }
+    &__button {
+        border: 2px solid #20CAAE;
+        background-color: unset;
+        padding: 1em;
+        margin-top: 4em; 
+        width: 100%;
+        color: $font-color2;
+        border-radius: 3em;
+        cursor: pointer;
+    }
+}
+
+@media only screen and (max-width: 1750px) {
+    .slider__box {
+        width: 35%;
+    }
+}
+@media only screen and (max-width: 1550px) {
+    .slider__box {
+        width: 45%;
+    }
+    .slider__fig {
+        width: 40%;
+    }
+    .slider__text-container {
+        left: 50%;
+    }
+}
+@media only screen and (max-width: 1250px) {
+    .slider__box {
+        width: 97%;
+    }
+    .slider__fig {
+        width: 25%;
+    }
+    .slider__text-container {
+        left: 30%;
+    }
+    .slider__arrow-left {
+        display: none;
+    }
+    .slider__arrow-right {
+        display: none;   
+    }
+}
+
+.main {
+    margin: 5em auto 0 auto;
+    // width: 90%;
+    display: grid;
+    grid-template-columns: 20% 1fr;
+    &__box {
+        margin: 2em;
+        position: relative;
+        display: inline-block;
+        background-color: $bg-box-color;
+        width: 40%;
+        height: 400px;
+        transition: visibility 0s 200ms, opacity 200ms linear, width 400ms;
+    }
+    &__fig {
+        position: absolute;
+        top: 50%;
+        left: -2em;;
+        transform: translateY(-50%);
+        width: 30%;
+    }
+    &__img {
+        width: 100%;
+    }
+    &__info-container {
+        position: absolute;
+        left: 30%;
+        top: 3.1em;
+    }
+    &__hearts {
+        margin: 1em 0;
+    }
+}
