--- a/content/css/style.css
+++ b/content/css/style.css
@@ -426,6 +426,7 @@ body {
   color: #EEEEEE;
   border-radius: 3em;
   cursor: pointer;
+  font-weight: bold;
 }
 
 @media only screen and (max-width: 1750px) {
@@ -472,6 +473,38 @@ body {
       grid-template-columns: 20% 1fr;
 }
 
+.main__link {
+  display: inline-block;
+  margin: 0 1em;
+  background-color: unset;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.main__sort {
+  position: relative;
+}
+
+.main__line {
+  position: absolute;
+  display: block;
+  height: 1px;
+  width: 40%;
+  left: 10em;
+  top: 50%;
+  background-color: #414141;
+  opacity: 0.5;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.main__genre-text {
+  margin-right: 50%;
+  display: inline-block;
+  position: relative;
+}
+
 .main__box {
   margin: 2em;
   position: relative;
@@ -500,9 +533,23 @@ body {
   position: absolute;
   left: 30%;
   top: 3.1em;
+  margin: 0 1em;
 }
 
 .main__hearts {
   margin: 1em 0;
+}
+
+.main__button {
+  border: 2px solid #20CAAE;
+  background-color: unset;
+  padding: 1em;
+  float: right;
+  margin-top: 4em;
+  width: 55%;
+  color: #20CAAE;
+  border-radius: 3em;
+  font-weight: bold;
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
