--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -347,7 +347,7 @@ body {
         color: $font-color2;
     }
     &__button {
-        border: 2px solid #20CAAE;
+        border: 2px solid $highlight-color;
         background-color: unset;
         padding: 1em;
         margin-top: 4em; 
@@ -355,6 +355,7 @@ body {
         color: $font-color2;
         border-radius: 3em;
         cursor: pointer;
+        font-weight: bold;
     }
 }
 
@@ -397,6 +398,34 @@ body {
     // width: 90%;
     display: grid;
     grid-template-columns: 20% 1fr;
+
+    &__link {
+        display: inline-block;
+        margin: 0 1em;
+        background-color: unset;
+        border: none;
+        text-decoration: underline;
+        cursor: pointer;
+    }
+    &__sort {
+        position: relative;
+    }
+    &__line {
+        position: absolute;
+        display: block;
+        height: 1px;
+        width: 40%;
+        left: 10em;
+        top: 50%;
+        background-color: $font-color;
+        opacity: 0.5;
+        transform: translateY(-50%);
+    }
+    &__genre-text {
+        margin-right: 50%;
+        display: inline-block;
+        position: relative;
+    }
     &__box {
         margin: 2em;
         position: relative;
@@ -420,8 +449,21 @@ body {
         position: absolute;
         left: 30%;
         top: 3.1em;
+        margin: 0 1em;
     }
     &__hearts {
         margin: 1em 0;
+    }
+    &__button {
+        border: 2px solid $highlight-color;
+        background-color: unset;
+        padding: 1em;
+        float: right;
+        margin-top: 4em; 
+        width: 55%;
+        color: $highlight-color;
+        border-radius: 3em;
+        font-weight: bold;
+        cursor: pointer;
     }
 }
