--- a/content/css/style.css
+++ b/content/css/style.css
@@ -3,6 +3,10 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 body {
@@ -367,7 +371,7 @@ body {
 }
 
 .footer__content-button {
-  border-right: 1px solid gray;
+  border-right: 1px solid white;
 }
 
 .footer {
