--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -61,6 +61,7 @@ $bg-box-color: #fff;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    user-select: none;
 }
 
 body {
@@ -353,7 +354,7 @@ body {
         border: unset;
     }
     &-button {
-        border-right: 1px solid gray;
+        border-right: 1px solid white;
     }
 }
 
