--- a/content/css/style.css
+++ b/content/css/style.css
@@ -15,10 +15,12 @@ body {
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
   background: #fff;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 50%;
-  height: 50%;
-  margin: 15em auto;
-  padding: 1em 1em;
 }
 
 .popup__headline {
@@ -32,32 +34,33 @@ body {
 }
 
 .popup__img {
-  height: 99%;
-  margin: 0 auto;
+  margin: 1em 1em;
 }
 
 .popup__fig-img {
-  display: block;
-  height: 90%;
-  width: auto;
+  display: inline-block;
   grid: 2/2;
+  margin: 1em 1em;
+  width: 20vw;
 }
 
 .popup-contact {
+  width: 20vw;
   grid: 3/4;
 }
 
 .popup-contact__input {
+  display: inline-block;
   font-size: 1.2em;
-  line-height: 3rem;
-  padding: 0 1em;
-  width: 100%;
+  line-height: 2rem;
+  padding: 0.5em 1em;
+  width: 99%;
   border-width: 0 0 1px;
   border-style: solid;
 }
 
 .popup-contact__label {
-  font-size: 2em;
+  font-size: 1em;
   font-style: normal;
 }
 
@@ -65,7 +68,7 @@ body {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
-  margin: 0 auto;
+  margin: 1em auto;
   font-size: 1em;
   width: 10em;
   height: 2em;
